[gd_scene load_steps=12 format=3 uid="uid://dkc1fn631e6x3"]

[ext_resource type="Script" uid="uid://coh0j70guxa1h" path="res://scripts/inventario.gd" id="1_upre7"]
[ext_resource type="Script" uid="uid://cio6anq7u0e5v" path="res://scripts/vp_sprite_3d.gd" id="2_45pl0"]

[sub_resource type="Shader" id="Shader_e6eor"]
resource_local_to_scene = true
code = "shader_type spatial;
render_mode cull_front, unshaded;

uniform vec4 outline_color : source_color;
uniform float outline_width = 2.0;

void vertex() {
	vec4 clip_position = PROJECTION_MATRIX * (MODELVIEW_MATRIX * vec4(VERTEX, 1.0));
	vec3 clip_normal = mat3(PROJECTION_MATRIX) * (mat3(MODELVIEW_MATRIX) * NORMAL);
	
	vec2 offset = normalize(clip_normal.xy) / VIEWPORT_SIZE * clip_position.w * outline_width * 2.0;
	
	clip_position.xy += offset;
	
	POSITION = clip_position;
}

void fragment() {
	ALBEDO = outline_color.rgb;
	if (outline_color.a < 1.0) {
		ALPHA = outline_color.a;
	}
}

//void light() {
	// Called for every pixel for every light affecting the material.
	// Uncomment to replace the default light processing function with this one.
//}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dgckr"]
resource_local_to_scene = true
render_priority = 0
shader = SubResource("Shader_e6eor")
shader_parameter/outline_color = Color(0, 0, 0, 0.270588)
shader_parameter/outline_width = 10.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_e6eor"]
resource_local_to_scene = true
render_priority = 1
next_pass = SubResource("ShaderMaterial_dgckr")
transparency = 1
albedo_color = Color(1, 0, 0, 0.129412)
rim = 0.0
rim_tint = 0.4
grow_amount = 0.337

[sub_resource type="BoxMesh" id="BoxMesh_e6eor"]
material = SubResource("StandardMaterial3D_e6eor")
size = Vector3(0.3, 0.3, 0.3)

[sub_resource type="BoxShape3D" id="BoxShape3D_e6eor"]
size = Vector3(0.3, 0.3, 0.3)

[sub_resource type="SystemFont" id="SystemFont_e6eor"]
font_names = PackedStringArray("Fira Code")
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_45pl0"]
font = SubResource("SystemFont_e6eor")
font_size = 200
outline_size = 50
outline_color = Color(0, 0, 0, 1)

[sub_resource type="ViewportTexture" id="ViewportTexture_45pl0"]
viewport_path = NodePath("SubViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_p5ggw"]
viewport_path = NodePath("SubViewport")

[node name="Inventario" type="Node3D"]
script = ExtResource("1_upre7")

[node name="VisualCubo" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000517935, 0.000622958, 0.000113428)
mesh = SubResource("BoxMesh_e6eor")

[node name="AreaItens" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2048

[node name="CollisionShape3D" type="CollisionShape3D" parent="AreaItens"]
shape = SubResource("BoxShape3D_e6eor")

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(256, 256)

[node name="Label" type="Label" parent="SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
text = "99"
label_settings = SubResource("LabelSettings_45pl0")
horizontal_alignment = 3
vertical_alignment = 3

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
pixel_size = 0.001
billboard = 2
texture = SubResource("ViewportTexture_45pl0")
script = ExtResource("2_45pl0")
_vpt = SubResource("ViewportTexture_p5ggw")

[connection signal="body_entered" from="AreaItens" to="." method="_on_area_itens_body_entered"]
[connection signal="body_exited" from="AreaItens" to="." method="_on_area_itens_body_exited"]
